--- a/ChangeLog
+++ b/ChangeLog
@@ -908,7 +908,10 @@
 == [8.0.12] (not released yet) ==
 
 * Eliminate 'make_key is defined but unused' gcc warning in threadkeytest
+* Ensure _GNU_SOURCE is defined if HAVE_DLADDR is defined by configure
+* Fix 'implicit declaration of function pthread_atfork' gcc error on MinGW
 * Fix 'missing binary operator before token' gcc error in gcconfig.h
+* Fix extra 'extern C' for include signal.h in gcconfig.h
 
 Also, includes 7.6.20 changes
 
