Fix duplicate entry about FreeBSD in ChangeLog for v7.4.26 (fix of commit 0b76ff3b8)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1113,8 +1113,7 @@ Also, includes 7.4.4 changes
 * Fix 'unused GC_set_and_save_fault_handler' warning on OS X
 * Fix GC_push_stack_for() to push also Xmm registers on Windows/x64
 * Fix MACH_TYPE macro redefinition on Symbian/arm
-* Fix missing GC_pthread_sigmask on Free/NetBSD
-* Fix missing GC_pthread_sigmask on NetBSD
+* Fix missing GC_pthread_sigmask on FreeBSD and NetBSD
 * Fix missing redirect and implementation of pthread_sigmask() on OpenBSD
 
 Also, includes 7.2r changes.
