Update AUTHORS file (add Robert Hensing)

--- a/AUTHORS
+++ b/AUTHORS
@@ -385,6 +385,7 @@ Richard Sandiford <rsandifo@nildram.co.uk>
 Richard Zidlicky <Richard.Zidlicky@stud.informatik.uni-erlangen.de>
 Rob Haack <rhaack@polaris.unm.edu>
 Robert Brazile <brazile@diamond.bbn.com>
+Robert Hensing <robert@roberthensing.nl>
 Rodrigo Kumpera <kumpera@gmail.com>
 Roger Pack <rogerpack2005@gmail.com>
 Roger Sayle <roger@eyesopen.com>
