Update AUTHORS file (add Kirill A. Korinsky)

--- a/AUTHORS
+++ b/AUTHORS
@@ -261,6 +261,7 @@ Kevin Kenny <kenny@m.cs.uiuc.edu>
 Kevin Tew <tewk@racket-lang.org>
 Kevin Warne <kevinw@direct.ca>
 Kimura Wataru <kimuraw@i.nifty.jp>
+Kirill A. Korinsky <kirill@korins.ky>
 Kjetil Matheussen <k.s.matheussen@notam02.no>
 Klaus Treichel <ktreichel@web.de>
 Klemens Zwischenbrugger <ka7@la-evento.com>
