--- a/AUTHORS
+++ b/AUTHORS
@@ -212,6 +212,7 @@ Jay Krell <jaykrell@microsoft.com>
 Jean-Baptiste Nivois
 Jean-Claude Beaudoin <jean.claude.beaudoin@gmail.com>
 Jean-Daniel Fekete <fekete@cs.umd.edu>
+Jeaye Wilkerson <contact@jeaye.com>
 Jeff Sturm <jsturm@one-point.com>
 Jeffrey Hsu <hsu@soda.berkeley.edu>
 Jeffrey Mark Siskind
