Update AUTHORS file (add David Rubin)

--- a/AUTHORS
+++ b/AUTHORS
@@ -138,6 +138,7 @@ David Miller <davem@davemloft.net>
 David Mosberger <davidm@hpl.hp.com>
 David Peroutka <djp@volny.cz>
 David Pickens <dsp@rci.rutgers.edu>
+David Rubin <daviru007@icloud.com>
 David Stes <stes@d5e02b1d.kabel.telenet.be>
 David Terei <d@davidterei.com>
 David Van Horn <dvanhorn@ccs.neu.edu>
