--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,31 @@
+2023-12-27  Ivan Maidanski <ivmai@mail.ru>
+
+	* os_dep.c [MPROTECT_VDB] (GC_remove_protection): Do not call
+	get_pht_entry_from_index(); do not check page already marked
+	dirty; add comment instead.
+
+2023-12-25  Ivan Maidanski <ivmai@mail.ru>
+
+	* malloc.c [REDIRECT_MALLOC && GC_LINUX_THREADS] (GC_init_lib_bounds):
+	Wrap GC_text_mapping() calls into LOCK/UNLOCK(); add comment.
+
+2023-12-10  Ivan Maidanski <ivmai@mail.ru>
+
+	* pthread_support.c [!GC_NO_FINALIZATION && INCLUDE_LINUX_THREAD_DESCR
+	&& REDIRECT_MALLOC] (GC_check_finalizer_nested): If me variable is NULL
+	then return NULL; add comment.
+
+2023-11-30  Ivan Maidanski <ivmai@mail.ru>
+
+	* mallocx.c (GC_posix_memalign): Define p local variable; specify that
+	the result of GC_memalign() is unlikely to be NULL; set *memptr only
+	when the function returns zero.
+
+2023-11-28  Ivan Maidanski <ivmai@mail.ru>
+
+	* os_dep.c [MPROTECT_VDB && DARWIN] (GC_forward_exception): Adjust
+	indentation of '}' for a block statement.
+
 2023-10-03  Ivan Maidanski <ivmai@mail.ru>
 
 	* misc.c (GC_stack_last_cleared): Fix mistyped name ("GC_gc_no") in
