Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -409,6 +409,7 @@ Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>
 Scott Ferguson <scott.ferguson@unity3d.com>
 Scott Schwartz <schwartz@groucho.cse.psu.edu>
 Sebastian Schoner <sebastian.schoner@unity3d.com>
+Seonghyun Kim <sh8281.kim@samsung.com>
 Shawn Wagner <shawnw@speakeasy.org>
 Shea Levy <shea@shealevy.com>
 Shiro Kawai <shiro@lava.net>
