--- a/AUTHORS
+++ b/AUTHORS
@@ -397,6 +397,7 @@ Samuel Thibault <samuel.thibault@gnu.org>
 Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>
 Scott Ferguson <scott.ferguson@unity3d.com>
 Scott Schwartz <schwartz@groucho.cse.psu.edu>
+Seonghyun Kim <sh8281.kim@samsung.com>
 Shawn Wagner <shawnw@speakeasy.org>
 Shea Levy <shea@shealevy.com>
 Shiro Kawai <shiro@lava.net>
