Update AUTHORS file (add Jake Hughes)

--- a/AUTHORS
+++ b/AUTHORS
@@ -204,6 +204,7 @@ Ivan R <iarspider@gmail.com>
 Jaap Boender <jaapb@netbsd.org>
 Jack Andrews <effbiae@gmail.com>
 Jacob Navia <jacob.navia@jacob.remcomp.fr>
+Jake Hughes <jh@jakehughes.uk>
 Jakub Jelinek <jakub@redhat.com>
 Jakub Wojciech <jakub-w@riseup.net>
 James Clark <jjc@jclark.com>
